# curriculum-vitae

./: .gitattributes  .gitignore  README.md
backend/: Cargo.toml  README.md
backend/db/: 1_info.sql  2_categories.sql  2_education.sql  2_languages.sql  3_education.sql  3_experience.sql  3_project.sql  3_skills.sql  4_categories_text.sql  4_education_text.sql  4_experience_text.sql  4_info_text.sql  4_project_text.sql  4_skills.sql  4_softwares.sql  5_programming_languages.sql  5_project.sql  5_softwares.sql  6_programming_languages.sql  6_project_tags.sql  7_languages.sql  8_project_tags.sql  _languages.sql  _programming_languages.sql  _project.sql  _softwares.sql  a_skills.sql  education.sql  experience.sql  info.sql  install_db.sh  project.sql
backend/src/: db.rs  main.rs
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/.svelte-kit/: ambient.d.ts  tsconfig.json
frontend/src/: app.html
frontend/src/lib/: cv.css  processdata.js
frontend/src/lib/components/: education.svelte  experience.svelte  flag-component.svelte  markdown-highlight.svelte  pill.svelte  projects-popup.svelte  projects.svelte  section.svelte  sidebar-component.svelte  sidebar.svelte  slideshow.svelte  subsection.svelte  suggest.svelte
frontend/src/lib/css/: base.css  cv.css  education.css  experience.css  flag.css  markdown.css  pill.css  project-popup.css  projects.css  section.css  sidebar-component.css  sidebar.css  slide.css  slideshow.css  suggest.css
frontend/src/lib/js/: color.js  date.js  (+5 more)
frontend/src/routes/: +page.js  +page.svelte
(+5 files in other folders)
